added properties to the handlebar temp. Also added id and type to the handlebar script

--- a/class-04-templates/pair-assignment/starter-code/index.html
+++ b/class-04-templates/pair-assignment/starter-code/index.html
@@ -15,16 +15,16 @@
         - Be sure to give it a meaningful id attribute, and don't forget to specify the type!
         - Insert placeholder keys.
     -->
-    <script id="" type="">
-      <article class="clearfix" data-author="{{}}" data-category="{{}}">
+    <script id="blog-template" type="text/x-handlebars-template">
+      <article class="clearfix" data-author="{{author}}" data-category="{{category}}">
         <header>
-          <h1>{{}}</h1>
+          <h1>{{title}}</h1>
           <div class="byline">
-            By <address><a href="{{}}">{{}}</a></address>
-            {{}}
+            By <address><a href="{{authorUrl}}">{{author}}</a></address>
+            {{publishedOn}}
           </div>
         </header>
-        <section class="article-body">{{{}}}</section>
+        <section class="article-body">{{{body}}}</section>
         <a href="#" class="read-on">Read on &rarr;</a>
       </article>
     </script>
