--- a/class-07-functional-programming/pair-assignment/starter-code/index.html
+++ b/class-07-functional-programming/pair-assignment/starter-code/index.html
@@ -86,6 +86,7 @@
       // TODO: The .fetchAll() method call now requires a callback.
       // What do we want to run WHEN this method is done?
       // Article.fetchAll(); // Add an argument to the function call.
+      Article.fetchAll(articleView.initIndexPage);
     </script>
   </body>
 </html>
