--- a/class-11-spa-routing/pair-assignment/starter-code/index.html
+++ b/class-11-spa-routing/pair-assignment/starter-code/index.html
@@ -77,7 +77,7 @@
     <footer>
       &copy; 2015 Code Fellows | Static Blog | Happy Ipsum!
     </footer>
-    <!-- TODO: Be sure to include the routing functionality with the correct script files.
+    <!-- DONE: Be sure to include the routing functionality with the correct script files.
         Don't forget your controllers! Ensure the load order satisfies any dependencies: -->
 
     <script src="/vendor/scripts/jquery-2.1.4.js"></script>
@@ -93,7 +93,7 @@
     <script src="/scripts/article.js"></script>
     <script src="/scripts/articleView.js"></script>
 
-    <!-- TODO: These function calls inside the script tag do not look great here. Why not place them where
+    <!-- DONE: These function calls inside the script tag do not look great here. Why not place them where
         they belong, in our brand new article controller?!: -->
     <script>
 
