--- a/class-11-spa-routing/pair-assignment/starter-code/index.html
+++ b/class-11-spa-routing/pair-assignment/starter-code/index.html
@@ -84,19 +84,19 @@
     <script src="/vendor/scripts/handlebars.js"></script>
     <script src="/vendor/scripts/marked.js"></script>
     <script src="/vendor/scripts/html5sql.js"></script>
-    <script src="vendor/scripts/webdb.js"></script>
-    <script src="server.js"></script>
+    <script src="/vendor/scripts/webdb.js"></script>
+    <script src="/vendor/scripts/page.js"></script>
+    
+
+
+
+    <script src="/scripts/article.js"></script>
+    <script src="/scripts/articleView.js"></script>
     <script src="/scripts/articleController.js"></script>
     <script src="/scripts/aboutController.js"></script>
     <script src="/scripts/routes.js"></script>
 
-    <script src="/scripts/article.js"></script>
-    <script src="/scripts/articleView.js"></script>
-
     <!-- DONE: These function calls inside the script tag do not look great here. Why not place them where
         they belong, in our brand new article controller?!: -->
-    <script>
-
-    </script>
   </body>
 </html>
