--- a/class-11-spa-routing/pair-assignment/starter-code/admin.html
+++ b/class-11-spa-routing/pair-assignment/starter-code/admin.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="/styles/layout.css">
     <link rel="stylesheet" href="/styles/modules.css">
     </head>
-    <script id="author-template" type="text/x-handlebars-template">
+    <!-- <script id="author-template" type="text/x-handlebars-template">
       <li><strong>{{name}}</strong>: {{numWords}} words written</li>
-    </script>
+    </script> -->
   <body>
     <header class="site-header clearfix">
       <section class="heading-group-h1 pull-left">
@@ -30,16 +30,15 @@
         </ul>
       </nav>
     </header>
-    <main class="clearfix">
-      <h1>Blog Stats</h1>
-      <section id="blog-stats">
-        <dt>Total articles:</dt> <dd class="articles"></dd>
-        <dt>Total words:</dt> <dd class="words"></dd>
-        <h2>Author Stats</h2>
-        <p><em>Details on who is writing, and how much writing they are doing...</em></p>
-        <ul class="author-stats">
-        </ul>
-      </section>
+    <main class="clearfix">    <h1>Blog Stats</h1>
+        <!-- <section id="blog-stats">
+          <dt>Total articles:</dt> <dd class="articles"></dd>
+          <dt>Total words:</dt> <dd class="words"></dd>
+          <h2>Author Stats</h2>
+          <p><em>Details on who is writing, and how much writing they are doing...</em></p>
+          <ul class="author-stats">
+          </ul>
+        </section> -->
     </main>
     <footer>
       &copy; 2015 Code Fellows | Static Blog | Happy Ipsum!
@@ -50,7 +49,7 @@
     <script src="/scripts/article.js"></script>
     <script src="/scripts/articleView.js"></script>
     <script>
-      Article.fetchAll(articleView.initAdminPage);
+      // Article.fetchAll(articleView.initAdminPage);
     </script>
   </body>
 </html>
