--- a/class-11-spa-routing/pair-assignment/starter-code/index.html
+++ b/class-11-spa-routing/pair-assignment/starter-code/index.html
@@ -24,6 +24,9 @@
         <a href="#" class="read-on">Read on &rarr;</a>
       </article>
     </script>
+    <script id="author-template" type="text/x-handlebars-template">
+      <li><strong>{{name}}</strong>: {{numWords}} words written</li>
+    </script>
   </head>
   <body>
     <header class="site-header clearfix">
@@ -73,6 +76,15 @@
           </ul>
         </section>
       </section>
+      <section id="blog-stats">
+        <h1>Blog Stats</h1>
+        <dt>Total articles:</dt> <dd class="articles"></dd>
+        <dt>Total words:</dt> <dd class="words"></dd>
+        <h2>Author Stats</h2>
+        <p><em>Details on who is writing, and how much writing they are doing...</em></p>
+        <ul class="author-stats">
+        </ul>
+      </section>
     </main>
     <footer>
       &copy; 2015 Code Fellows | Static Blog | Happy Ipsum!
@@ -86,7 +98,7 @@
     <script src="/vendor/scripts/html5sql.js"></script>
     <script src="/vendor/scripts/webdb.js"></script>
     <script src="/vendor/scripts/page.js"></script>
-    
+
 
 
 
@@ -94,6 +106,7 @@
     <script src="/scripts/articleView.js"></script>
     <script src="/scripts/articleController.js"></script>
     <script src="/scripts/aboutController.js"></script>
+    <script src="/scripts/adminController.js"></script>
     <script src="/scripts/routes.js"></script>
 
     <!-- DONE: These function calls inside the script tag do not look great here. Why not place them where
